// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Label" renders (dark theme) 1`] = `
.emotion-0 {
  color: initial;
  display: inline;
  font-size: 12px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  width: 100%;
}

.emotion-0:focus-within {
  color: #0772de;
}

.emotion-1 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

<div
  className="emotion-1"
>
  <label
    className="emotion-0"
  >
    Label
  </label>
</div>
`;

exports[`"Label" renders 1`] = `
.emotion-1 {
  background: rgb(237,237,238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: initial;
  display: inline;
  font-size: 12px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  width: 100%;
}

.emotion-0:focus-within {
  color: #0772de;
}

<div
  className="emotion-1"
>
  <label
    className="emotion-0"
  >
    Label
  </label>
</div>
`;

exports[`"LabelLink" renders (dark theme) 1`] = `
.emotion-1 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: #fff;
  display: inline;
  font-size: 12px;
  font-weight: 600;
  text-align: left;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-0:hover {
  color: rgb(214,214,214);
}

.emotion-0:visited,
.emotion-0:link,
.emotion-0:active {
  color: #fff;
}

<div
  className="emotion-1"
>
  <a
    className="emotion-0"
  >
    LabelLink
  </a>
</div>
`;

exports[`"LabelLink" renders 1`] = `
.emotion-1 {
  background: rgb(237,237,238);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(29,30,31);
  display: inline;
  font-size: 12px;
  font-weight: 600;
  text-align: left;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-0:hover {
  color: rgb(24,25,26);
}

.emotion-0:visited,
.emotion-0:link,
.emotion-0:active {
  color: rgb(29,30,31);
}

<div
  className="emotion-1"
>
  <a
    className="emotion-0"
  >
    LabelLink
  </a>
</div>
`;
